--- a/spago.yaml
+++ b/spago.yaml
@@ -7,9 +7,9 @@ package:
       githubOwner: rowtype-yoga
       githubRepo: purescript-js-bigints
   dependencies:
-    - integers
-    - maybe
-    - prelude
+    - integers: ">=6.0.0 <7.0.0"
+    - maybe: ">=6.0.0 <7.0.0"
+    - prelude: ">=6.0.1 <7.0.0"
   test:
     main: Test.Main
     dependencies:
